--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "supabase-minichat",
-  "version": "0.0.0-automated",
+  "version": "0.0.1",
   "description": "Isomorphic Javascript client for Supabase",
   "keywords": [
     "javascript",
