--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "supabase-minichat",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "Isomorphic Javascript client for Supabase",
   "keywords": [
     "javascript",
@@ -12,8 +12,7 @@
     "url": "https://github.com/supabase/supabase-js/issues"
   },
   "license": "MIT",
-  "main": "dist/main/index.js",
-  "miniprogram": "dist",
+  "main": "index.js",
   "author": "Supabase",
   "files": [
     "dist",
@@ -43,6 +42,7 @@
     "docs:json": "typedoc --entryPoints src/index.ts --out docs --includes src/**/*.ts --json docs/spec.json"
   },
   "dependencies": {
+    "fetch": "^1.1.0",
     "wefetch": "^1.3.6"
   },
   "devDependencies": {
