--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "supabase-minichat",
-  "version": "0.0.3",
-  "description": "Isomorphic Javascript client for Supabase",
+  "version": "0.0.6",
+  "description": "Isomorphic Javascript client for Supabase-minichat",
   "keywords": [
     "javascript",
     "typescript",
     "supabase"
   ],
-  "homepage": "https://github.com/supabase/supabase-js",
-  "bugs": {
-    "url": "https://github.com/supabase/supabase-js/issues"
-  },
+  "homepage": "https://github.com/MemFire-Cloud/supabase-minichat",
   "license": "MIT",
   "main": "index.js",
   "author": "Supabase",
@@ -23,7 +20,7 @@
   "sideEffects": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/supabase/supabase-js.git"
+    "url": "git+https://github.com/MemFire-Cloud/supabase-minichat.git"
   },
   "scripts": {
     "clean": "rimraf dist docs",
@@ -33,7 +30,7 @@
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "build:umd": "webpack",
-    "types-generate": "dts-gen -m '@supabase/supabase-js' -s",
+    "types-generate": "dts-gen -m 'supabase-minichat' -s",
     "test": "jest --runInBand",
     "test:db": "cd infra/db && docker-compose down && docker-compose up -d && sleep 5",
     "test:watch": "jest --watch --verbose false --silent false",
@@ -42,7 +39,6 @@
     "docs:json": "typedoc --entryPoints src/index.ts --out docs --includes src/**/*.ts --json docs/spec.json"
   },
   "dependencies": {
-    "fetch": "^1.1.0",
     "wefetch": "^1.3.6"
   },
   "devDependencies": {
