--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "supabase-minichat",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Isomorphic Javascript client for Supabase",
   "keywords": [
     "javascript",
@@ -46,6 +46,9 @@
     "wefetch": "^1.3.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.18.10",
+    "babel-loader": "^8.2.5",
     "@types/jest": "^26.0.13",
     "husky": "^4.3.0",
     "jest": "^26.4.1",
